--- a/src/index.css
+++ b/src/index.css
@@ -465,6 +465,18 @@
     color: var(--foreground);
   }
 
+  button, [role="button"], [type="button"], [type="submit"], [type="reset"], a, label[for], .cursor-pointer, [data-clickable="true"], [onClick], summary, [tabindex]:not([tabindex="-1"]):not(input):not(textarea):not(select), select, input[type="checkbox"], input[type="radio"], input[type="file"] {
+    cursor: pointer;
+  }
+
+  button:disabled, [role="button"]:disabled, [type="button"]:disabled, [type="submit"]:disabled, [type="reset"]:disabled, .disabled, [disabled] {
+    cursor: not-allowed;
+  }
+
+  input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
+    cursor: text;
+  }
+
   :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) h1 {
     font-size: var(--text-2xl);
     font-weight: var(--font-weight-medium);
