--- a/src/index.css
+++ b/src/index.css
@@ -469,11 +469,11 @@
     cursor: pointer;
   }
 
-  button:disabled, [role="button"]:disabled, [type="button"]:disabled, [type="submit"]:disabled, [type="reset"]:disabled, .disabled, [disabled] {
+  :is(button, [role="button"], [type="button"], [type="submit"], [type="reset"]):disabled, .disabled, [disabled] {
     cursor: not-allowed;
   }
 
-  input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
+  :is(input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea) {
     cursor: text;
   }
 
